--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -14,7 +14,8 @@ body {
     background-color: #1b1b2f;
     /* Dark background */
     color: #f8f8ff;
-    padding: 1rem;
+    padding: 16px;
+    height: 100vh;
 }
 
 /* Main Container Styling */
@@ -25,7 +26,7 @@ body {
     background-color: #161623;
     /* Deep purple */
     border-radius: 8px;
-    box-shadow: 0 4px 20px rgba(255, 0, 255, 0.5);
+    box-shadow: 0 4px 20px rgba(1, 7, 94, 0.5);
     /* Neon glow */
 }
 
@@ -33,9 +34,9 @@ body {
 h1 {
     text-align: center;
     margin-bottom: 20px;
-    color: #ff007a;
+    color: #00aeff;
     /* Neon pink */
-    text-shadow: 0 0 8px #ff007a, 0 0 16px #ff007a;
+    text-shadow: 0 0 8px #32008f9a, 0 0 16px #01177a;
     /* Glowing effect */
 }
 
@@ -55,7 +56,7 @@ h1 {
     padding: 10px;
     background-color: #24243e;
     border-radius: 10px;
-    box-shadow: 0 0 15px rgba(0, 255, 255, 0.3);
+    box-shadow: 0 0 15px rgba(1, 55, 155, 0.3);
     /* Neon cyan */
     transition: transform 0.3s, box-shadow 0.3s;
 
@@ -120,80 +121,17 @@ h1 {
     height: auto;
     object-fit: cover;
     border-radius: 50%;
-    border: 3px solid #ff007a;
-    /* Neon pink */
-    box-shadow: 0 0 12px #ff007a;
-    /* Glowing effect */
+    border: 3px solid rgb(1, 162, 184);
 }
 
-/* Full-size Artist Image Styling */
-.artist-image {
-    display: block;
-    margin: 0 auto;
-    width: 300px;
-    border-radius: 8px;
-    border: 3px solid #00ffcc;
-    /* Neon cyan */
-    box-shadow: 0 0 20px #00ffcc;
-}
-
-/* Information Section Styling */
-.info {
-    margin: 20px 10px;
-    font-size: 1rem;
-    padding: 25px;
-    color: #ffcfcf;
-    background: linear-gradient(135deg, rgb(0, 0, 0), rgba(255, 0, 0, 0.466));
-    border-radius: 10px;
-    box-shadow: 0 4px 20px rgba(0, 204, 255, 0.5);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-
-.info:hover {
-    transform: scale(1.02);
-    box-shadow: 0 8px 40px rgba(255, 0, 179, 0.7);
-    /* Pink glow on hover */
-}
-
-.info p {
-    margin: 10px 0;
-    line-height: 1.5;
-}
 
 /* Link Styling */
 a {
     text-decoration: none;
-    color: #00ffcc;
+    color: rgb(1, 162, 184);
     /* Neon cyan */
 }
 
 a:hover {
-    color: #ff007a;
-    text-shadow: 0 0 10px #ff007a;
-}
-
-/* Concert Container */
-.concert-container {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-}
-
-/* Responsive Layout for Concerts */
-@media (min-width: 768px) {
-    .concert-container {
-        flex-direction: row;
-        justify-content: space-between;
-    }
-}
-
-.concert-section h2 {
-    color: #ff007a;
-    text-align: left;
-}
-
-
-.concert-section ul {
-    list-style: none;
-    padding: 0;
+    text-shadow: 0 0 10px #0084ff;
 }
