--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -1,11 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Exo:700|Exo:400');
 
-body {
-    font-family: 'Exo';
-    font-weight: bold;
-}
-
-body:has(.theme.light) {
+body:has(.theme:checked) {
     --text: hsl(248, 60%, 5%);
     --background: hsl(248, 60%, 95%);
     --primary: hsl(249, 59%, 28%);
@@ -13,19 +8,20 @@ body:has(.theme.light) {
     --accent: hsl(109, 59%, 43%);
 }
 
-body:has(.theme.dark) {
+body {
     --text: hsl(248, 57%, 95%);
     --background: hsl(249, 57%, 5%);
     --primary: hsl(249, 59%, 72%);
-    --secondary: hsl(7, 69%, 31%);
     --secondary: hsl(228, 64%, 32%);
     --accent: hsl(109, 59%, 57%);
 }
 
 
 body {
+    font-family: 'Exo';
+    font-weight: bold;
     background-color: var(--background);
-    color: hsl(270, 43%, 91%);
+    color: var(--text);
     padding: 16px;
     height: 100vh;
 }
@@ -56,7 +52,6 @@ h1 {
     gap: 20px;
     max-width: 90vw;
     padding: 2rem 1rem;
-    background-color: #161623;
     border-radius: 8px;
 }
 
@@ -65,11 +60,18 @@ h1 {
     max-width: 23%;
     border-radius: 8px;
     text-align: center;
-    transition: transform 0.3s, box-shadow 0.3s;
+    transition: all 0.3s;
 }
 
 .artist-card:hover {
     transform: scale(1.05);
+}
+
+
+body:not(.scrolling) .container:has(.artist-card:hover) .artist-card:not(:hover) {
+    transition: filter 2s 0.3s, opacity 2s 0.3s;
+    opacity: 80%;
+    filter: blur(2px) brightness(80%);
 }
 
 .artist-card:hover img {
@@ -85,7 +87,7 @@ h1 {
 
 .artist-card:hover .nameWraper {
     box-shadow: 0 0 10px var(--primary);
-    border: 1px solid rgb(1, 162, 184);
+    border: 1px solid var(--primary);
 }
 
 
@@ -151,16 +153,40 @@ h1 {
     left: 0;
 }
 
-
-
-
-/* Link Styling */
-a {
-    text-decoration: none;
-    color: rgb(1, 162, 184);
-    /* Neon cyan */
+.artist-card .image {
+    position: relative;
 }
 
-a:hover {
-    text-shadow: 0 0 10px #0084ff;
+.creationDate {
+    padding: 5px 10px;
+    border-radius: 10px;
+    opacity: 0;
+    bottom: 10px;
+    right: 5px;
+    position: absolute;
+    color: var(--background);
+    background-color: var(--text);
+}
+
+.artist-card:hover .creationDate {
+    opacity: 1;
+}
+
+.themeWrapper .theme {
+    opacity: 0;
+}
+
+.themeWrapper {
+    position: relative;
+}
+
+.themeWrapper * {
+    width: 100%;
+}
+
+.themeWrapper .theme {
+    position: absolute;
+    height: 100%;
+    top: 0;
+    left: 0;
 }
