--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -26,9 +26,24 @@ body {
 }
 
 header {
+    z-index: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 100vw;
+    position: fixed !important;
+    top: 0;
+    left: 0;
+    height: 7vh;
+}
+
+header>* {
+    margin: 0;
+    padding: 10px 5px;
+}
+
+header~* {
+    margin-top: calc(10vh + 15px);
 }
 
 /* Title Styling */
@@ -42,7 +57,6 @@ h1 {
 }
 
 .container {
-    margin: auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -188,4 +202,21 @@ body:not(.scrolling) .container:has(.artist-card:hover) .artist-card:not(:hover)
     height: 100%;
     top: 0;
     left: 0;
+}
+
+.dim-bg {
+    overflow: hidden;
+    position: relative;
+}
+
+.dim-bg::before {
+    content: '';
+    background: var(--background);
+    opacity: 0.9;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
 }
