--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -21,39 +21,31 @@ body {
     font-weight: 600;
     background-color: var(--background);
     color: var(--text);
-    padding: 16px;
-    height: 100vh;
+    margin: 0;
+}
+
+a {
+    text-decoration: none;
 }
 
 header {
+    padding: 16px;
     z-index: 1;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100vw;
-    position: fixed !important;
+    position: sticky !important;
     top: 0;
     left: 0;
-    height: 7vh;
 }
 
-header>* {
-    margin: 0;
-    padding: 10px 5px;
-}
-
-header~* {
-    margin-top: calc(10vh + 15px);
-}
-
-/* Title Styling */
 h1 {
     background: linear-gradient(120deg, var(--primary), var(--accent));
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 0;
 }
 
 .container {
@@ -212,7 +204,7 @@ body:not(.scrolling) .container:has(.artist-card:hover) .artist-card:not(:hover)
 .dim-bg::before {
     content: '';
     background: var(--background);
-    opacity: 0.9;
+    opacity: 0.7;
     top: 0;
     left: 0;
     position: absolute;
