--- a/static/styles/artist.css
+++ b/static/styles/artist.css
@@ -1,47 +1,37 @@
 .artist {
-    position: relative;
-    padding: 30px;
-    border-radius: 8px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: center;
-    height: 100%;
+    padding: 30px;
 }
 
 .artist .name {
     position: relative;
 }
 
-
 .artist .overview {
     max-width: 30vw;
-    margin-bottom: 10px;
 }
 
-.artist img {
+.artist .overview img {
     width: 100%;
     border-radius: 10px;
 }
 
-.details {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 10px;
+.info>.section p {
+    white-space: wrap;
 }
 
-.details .section {
-    white-space: nowrap;
+.info>.section {
+    min-width: 25vw;
     flex: 1;
+    white-space: nowrap;
     border: 1px solid var(--primary);
     border-radius: 10px;
     padding: 10px;
 }
 
-.artist .details .title {
+.artist .section .title {
     text-align: start;
     color: var(--primary);
     margin-bottom: 10px;
@@ -96,6 +86,8 @@
     width: 100%;
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
+    overflow: hidden;
 }
 
 
