--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -17,6 +17,7 @@ body {
 }
 
 body {
+    font-size: 2vw;
     font-family: 'Exo';
     font-weight: 600;
     background-color: var(--background);
@@ -55,14 +56,13 @@ h1 {
     justify-content: center;
     align-items: center;
     gap: 1.25rem;
-    max-width: 90vw;
     padding: 2rem 1rem;
     border-radius: 8px;
 }
 
 
 .artist-card {
-    max-width: 23%;
+    max-width: 23vw;
     border-radius: 8px;
     text-align: center;
     transition: all 0.3s;
