--- a/static/styles/index.css
+++ b/static/styles/index.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-    font-size: 2vw;
+    font-size: clamp(1rem, 2vw, 1.5rem);
     font-family: 'Exo';
     font-weight: 600;
     background-color: var(--background);
@@ -62,7 +62,7 @@ h1 {
 
 
 .artist-card {
-    max-width: 23vw;
+    width: clamp(1rem, 23vw, 15rem);
     border-radius: 8px;
     text-align: center;
     transition: all 0.3s;
