--- a/static/styles/artist.css
+++ b/static/styles/artist.css
@@ -8,30 +8,32 @@
 .artist .name {
     position: relative;
 }
-
+.artist .overview {
+    margin: auto;
+}
 .artist .overview img{
     max-width: 30vw;
 }
 
 .artist .overview img {
+    max-width: clamp(7rem, 30vw, 20rem);
     width: 100%;
     border-radius: 10px;
 }
+
 .artist .overview .section {
     width: 100%;
     white-space: nowrap;
 }
-.info>.section p {
-    white-space: wrap;
-}
 
 .info>.section {
-    min-width: 25vw;
+    min-width: 30vw;
     flex: 1;
     white-space: nowrap;
     border: 1px solid var(--primary);
     border-radius: 10px;
     padding: 10px;
+
 }
 
 .artist .section .title {
